# remote_temp

./: CMakeLists.txt  README.md  remote_temp.cpp  remote_temp.desktop  remote_temp.h
